<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image"
    android:orientation="vertical">




    <TextView
        android:id="@+id/greeting_with_time_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_txt"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:fontFamily="@font/noot"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/spinning_image" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
            android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_plain_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/hint"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_design"
            android:fontFamily="@font/noot"
            android:inputType="textPersonName" />

            <ImageButton

                android:id="@+id/send_name_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="onClickNameEntered"
                android:background="@drawable/image_button"
                android:text="@string/send_name_btn"
                />

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:background="@drawable/iw"
                android:onClick="onClickChangeToHebrew"/>
            <ImageView
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/en"
                android:onClick="onClickChangeToEnglish" />

        </LinearLayout>


</LinearLayout>