<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background_design"
    android:paddingTop="16dp"
    android:paddingBottom ="16dp">
    <ImageView
        android:id="@+id/final_image_pizza"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/family_pizza" />
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/final_pizza_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:fontFamily="@font/noot"
            android:textColor="@color/black"
            android:text="PizzaName" />

        <TextView
            android:id="@+id/final_pizza_content_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="pizza content"
            android:textStyle="bold"
            android:fontFamily="@font/noot"
            android:textColor="@color/gray"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/final_pizza_price_per_unit"
            android:layout_width="87dp"
            android:layout_height="20dp"
            android:gravity="bottom"
            android:text="pizza price"
            android:textColor="@color/black"
            android:fontFamily="@font/noot"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/final_pizza_amount"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:gravity="bottom"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:fontFamily="@font/noot"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/increase_amount"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="onClickInc"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/increase_amount"

                    android:background="@drawable/plus_button_shape_design"
                    android:textSize="14dp" />
                <Button
                    android:id="@+id/decrease_amount"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="onClickDec"
                    android:text="@string/decrease_amount"
                    android:background="@drawable/decrease_order_button"
                    android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>